<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/helpbtn"
        android:icon="@drawable/help"
        android:title="@string/HelpButton"
        android:orderInCategory="500"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/helpbtnHome"
        android:icon="@drawable/space"
        android:title="@string/navMenuHome"
        android:orderInCategory="550"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/helpbtnFav"
        android:icon="@drawable/heart"
        android:title="@string/navMenuFavourites"
        android:orderInCategory="560"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/helpbtnAccount"
        android:icon="@drawable/account"
        android:title="@string/navMenuAccount"
        android:orderInCategory="570"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/helpbtnAbout"
        android:icon="@drawable/info"
        android:title="@string/navMenuAbout"
        android:orderInCategory="580"
        app:showAsAction="never"
        />

</menu>