<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/appTitle"
        />
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mainUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:hint="@string/usernamehint"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center|bottom">

                    <ProgressBar
                        android:id="@+id/mainProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mainDateSelectedTitle"
                            android:textSize="25sp"
                            />
                        <TextView
                            android:id="@+id/mainDatePicked"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Date selected"
                            android:textSize="25sp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/mainDatePickerButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mainDatePickerButton"
                            android:onClick="showDatePickerDialog"
                            android:layout_weight="1"
                            />
                        <Button
                            android:id="@+id/mainDateFetchDateContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mainDateFetchDateContent"
                            android:layout_weight="1"
                            />
                    </LinearLayout>

                    <Button
                        android:id="@+id/mainFavouriteThisImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mainFavouriteThisImage"
                        />

                </LinearLayout>

                <ImageView
                    android:id="@+id/mainImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <LinearLayout
                    android:id="@+id/mainTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mainTitleHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainTitleHeading"
                        />
                    <TextView
                        android:id="@+id/mainTitleContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainTitleContent"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mainDateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mainDateHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainDateHeading"
                        />
                    <TextView
                        android:id="@+id/mainDateContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainDateContent"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mainHDURLLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mainHDURLHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainHDURLHeading"

                        />
                    <TextView
                        android:id="@+id/mainHDURLContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainHDURLContent"
                        android:autoLink="web"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mainExplanationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mainExplanationHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainExplanationHeading"
                        />
                    <TextView
                        android:id="@+id/mainExplanationContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainExplanationContent"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/header_layout"
                app:menu="@menu/nav_menu"
                />
        </androidx.drawerlayout.widget.DrawerLayout>
    </LinearLayout>