<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/aboutTitle"
        />
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thanksAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <!--content-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/space"
                    />
                <TextView
                    android:id="@+id/thanksSpace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanksSpace"
                    android:autoLink="web"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/heart"
                    />
                <TextView
                    android:id="@+id/thanksHeart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanksHeart"
                    android:autoLink="web"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/account"
                    />
                <TextView
                    android:id="@+id/thanksAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanksAccount"
                    android:autoLink="web"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/info"
                    />
                <TextView
                    android:id="@+id/thanksInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanksInfo"
                    android:autoLink="web"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/help"
                    />
                <TextView
                    android:id="@+id/thanksHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanksHelp"
                    android:autoLink="web"
                    />
            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_layout"
            app:menu="@menu/nav_menu"
            />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>